--- a/src/styles/blogs.css
+++ b/src/styles/blogs.css
@@ -6,7 +6,7 @@
 #blog_card {
     display: flex;
     align-items: center;
-    padding: 32px;
+    padding: 15px 32px 10px 32px;
 }
 #blog_card .blogInfo {
     display: flex;
@@ -24,7 +24,7 @@
     margin: 10px auto 20px 0;
     overflow: hidden;
 }
-#blog_card .blogInfo p {
+#blog_card .blogInfo #text p {
     font-size: 18px;
     color: rgb(120, 117, 122);
 }
@@ -32,27 +32,50 @@
     width: 100%;
     display: flex;
     align-items: center;
-    margin: 0 auto 0 0;
+    margin: 0 auto 15px 0;
 }
 #blog_card .blogInfo .authorImage img{
-    max-width: 45px;
-    height: 45px;
+    max-width: 35px;
+    height: 35px;
     border-radius: 30px;
+    object-fit: cover;
 } 
 #blog_card .blogInfo .authorImage p{
     color: rgb(0, 0, 0);
     font-size: 15px;
     margin: 0 0 0 15px;
 }
-#blog_card .blogInfo .authorImage .blogDate{
+#blog_card .blogInfo .authorImage .blogAuthor {
+    font-weight: 900;
+}
+#blog_card .blogInfo .authorImage .blogDate {
     color: #808080cf;
-    margin: 0 0 0 29px;
+    margin: 0 0 0 0;
+}
+#blog_card .blogInfo .authorImage .blogDate span {
+    margin: 0 5px;
+}
+#blog_card .blogInfo #dev_type {
+    display: flex;
+    align-items: center;
+    margin: 0 auto 0 0;
+}
+#blog_card .blogInfo #dev_type button {
+    border: none;
+    outline: none;
+    font-size: 13px;
+    padding: 5px 13px;
+    border-radius: 9px;
+}
+#blog_card .blogInfo #dev_type p {
+    margin: 0 0 0 22px;
 }
 #blog_card #preview_img {
-    width: 280px;
-    height: 200px;
+    width: 200px;
+    height: 193px;
     border-radius: 14px;
     margin: 0 0 0 31px;
+    object-fit: cover;
 }
 
 @media (max-width: 770px) {
